--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,10 @@ before_script:
 before_deploy:
   - carthage build --no-skip-current
   - carthage archive $FRAMEWORK_NAME
-
+deploy:
+  provider: releases
+  api_key: "25RAE2X7Ltq2hUFsp4u8"
+  file: "FILE TO UPLOAD"
+  skip_cleanup: true
+  on:
+    tags: true
