--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
-language: swift # or objective-c
-osx_image: xcode8
+# references:
+language: objective-c
+osx_image: xcode8.3
+xcode_sdk: iphonesimulator10.0
 script:
-  - xcodebuild -scheme SwiftyBase -workspace SwiftyBase.xcworkspace -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 6S,OS=9.1' build test
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+- set -o pipefail
+# cache: cocoapods
+# podfile: Example/Podfile
+# before_install:
+# - gem install cocoapods # Since Travis is not always on latest version
+# - pod install --project-directory=Example
+script:
+- xcodebuild test -enableCodeCoverage YES -workspace Example/SwiftyBase.xcworkspace -scheme SwiftyBase-Example -sdk iphonesimulator10.0 ONLY_ACTIVE_ARCH=NO | xcpretty
+- pod lib lint
