--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,8 @@ script:
 # - pod install --project-directory=Example
 script:
 - xcodebuild test -enableCodeCoverage YES -workspace Example/SwiftyBase.xcworkspace -scheme SwiftyBase-Example -sdk iphonesimulator10.0 ONLY_ACTIVE_ARCH=NO | xcpretty
+
 - pod lib lint
+
+after_success:
+- bash <(curl -s https://codecov.io/bash)
