--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
   global:
   - LC_CTYPE=en_US.UTF-8
   - LANG=en_US.UTF-8
-  - WORKSPACE=SwiftyBase.xcworkspace
+  - WORKSPACE=Example/SwiftyBase.xcworkspace
   - IOS_FRAMEWORK_SCHEME="SwiftyBase"
   - EXAMPLE_SCHEME="SwiftyBase-Example"
   matrix:
