--- a/.travis.yml
+++ b/.travis.yml
@@ -1,50 +1,33 @@
 # references:
 language: objective-c
 osx_image: xcode8.3
-branches:
-  only: 
-    - master  
-env:
-  global:
-  - LC_CTYPE=en_US.UTF-8
-  - LANG=en_US.UTF-8
+xcode_sdk: iphonesimulator10.0
 
-  matrix:
-    - DESTINATION="OS=10.3.1,name=iPhone 7 Plus" SCHEME="SwiftyBase" RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="YES"
+env:
+global:
+- LC_CTYPE=en_US.UTF-8
+- LANG=en_US.UTF-8
+
+matrix:
+- DESTINATION="OS=10.3.1,name=iPhone 7 Plus" SCHEME="SwiftyBase" RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="YES"
 
 before_install:
-  - gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
-  
+- gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
+
+script:
+- set -o pipefail
+# cache: cocoapods
+# podfile: Example/Podfile
+# before_install:
+# - gem install cocoapods # Since Travis is not always on latest version
+# - pod install --project-directory=Example
 script:
 
-  - set -o pipefail
-  - xcodebuild -version
-  - xcodebuild -showsdks
+- xcodebuild -workspace Example/SwiftyBase.xcworkspace -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES test | xcpretty;
 
-  # Build Framework in Debug and Run Tests if specified
-  - if [ $RUN_TESTS == "YES" ]; then
-      xcodebuild -workspace "Example/SwiftyBase.xcworkspace" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES test | xcpretty;
-    else
-      xcodebuild -workspace "Example/SwiftyBase.xcworkspace" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty;
-    fi
+- xcodebuild -workspace Example/SwiftyBase.xcworkspace -scheme SwiftyBase-Example -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty
 
-  # Build Framework in Release and Run Tests if specified
-  - if [ $RUN_TESTS == "YES" ]; then
-      xcodebuild -workspace "Example/SwiftyBase.xcworkspace" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES test | xcpretty;
-    else
-      xcodebuild -workspace "Example/SwiftyBase.xcworkspace" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty;
-    fi
-
-  # Build Example in Debug if specified
-  - if [ $BUILD_EXAMPLE == "YES" ]; then
-      xcodebuild -workspace "Example/SwiftyBase.xcworkspace" -scheme "SwiftyBase-Example" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty;
-    fi
-
-  # Run `pod lib lint` if specified
-  - if [ $POD_LINT == "YES" ]; then
-      pod lib lint;
-    fi
+- pod lib lint
 
 after_success:
-   - bash <(curl -s https://codecov.io/bash)
-   - sleep 5 # Workaround for https://github.com/travis-ci/travis-ci/issues/4725    
+- bash <(curl -s https://codecov.io/bash)
