--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
 # - pod install --project-directory=Example
 script:
 
-- xcodebuild -workspace Example/SwiftyBase.xcworkspace -scheme "$SCHEME" -destination "platform=iOS Simulator,OS=10.3.1,name=iPhone 7 Plus SCHEME="SwiftyBase" RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="YES" -configuration Debug ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES test | xcpretty;
+- xcodebuild -workspace Example/SwiftyBase.xcworkspace -scheme "$SCHEME" -configuration Debug ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES test | xcpretty;
 
 - xcodebuild -workspace Example/SwiftyBase.xcworkspace -scheme SwiftyBase-Example -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty
 
