--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
 global:
 - LC_CTYPE=en_US.UTF-8
 - LANG=en_US.UTF-8
+- FRAMEWORK_NAME=SwiftyBase
 
 before_install:
 - gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
@@ -28,3 +29,6 @@ script:
 
 after_success:
 - bash <(curl -s https://codecov.io/bash)
+before_deploy:
+- carthage build --no-skip-current
+- carthage archive $FRAMEWORK_NAME
